--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+img{
+  max-width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
 .App {
   text-align: center;
 }
@@ -35,4 +46,20 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.cate_list{
+  margin: 20px 0;
+}
+
+.cate_list button{
+  margin: 10px;
+}
+
+.gal_item{
+  margin: 0 0 30px 0;
+}
+
+.gallery_section h1{
+  margin: 15px 0;
 }
